--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,12 @@
 <%#= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, method: :post %>
 
 <% if user_signed_in? %>
-   <%= button_to "SignOut", destroy_user_session_path, method: :delete %>
+   <%= button_to "SignOut", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
 <% else %>
-   <%= button_to 'Login with Google', user_google_oauth2_omniauth_authorize_path, method: :post, :data => {turbo: "false"} %>
+   <%= link_to "Login", new_user_session_path, class: "btn btn-primary m-2" %>
+   <%= button_to user_google_oauth2_omniauth_authorize_path, method: :post, data: { turbo: "false" }, class: "btn btn-primary ms-2 d-flex align-items-center" do %>
+  <%= image_tag('ggl.webp', alt: 'Google Logo', class: 'me-2', width: 20, height: 20) %>
+  Login with Google
+<% end %>
+
 <% end %>
