--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= javascript_include_tag "manifest", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "custom", "data-turbo-track": "reload", defer: true %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
