--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
   <body>
 
     <% if notice %>
-      <p class = "notice"><%= flash[:notice] %></p>
+      <p class = "notice text-success"><%= flash[:notice] %></p>
     <% elsif alert %>
-      <p class = "alert"><%= flash[:alert] %></p>
+      <p class = "alert text-danger"><%= flash[:alert] %></p>
     <% end %>
     <%= yield %>
   </body>
